Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/FinalReceiverTest.out
FinalReceiverTest.java:11:43: compiler.err.mod.not.allowed.here: final
1 error
