Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/FinalReceiverTest.java
/*
 * @test /nodynamiccopyright/
 * @bug 8027886
 * @summary Receiver parameters must not be final
 * @compile/fail/ref=FinalReceiverTest.out  -XDrawDiagnostics FinalReceiverTest.java
 */

class FinalReceiverTest {
    void m() {
        class Inner {
            Inner(final FinalReceiverTest FinalReceiverTest.this) {}
        }
    }
}
